=== Maintenance

* 1 deprecation

  * deprecated ExampleMethods#implementation_backtrace - use ExampleMethods#backtrace instead

* 3 major enhancements

  * it { should matcher } - support for implicit receiver of #should (Joe Ferris of thoughtbot)
  * subject { ... } - works in conjunction with implicit receiver of #should
  * wrap_expectation (for wrapping multiple expectations and/or t/u assertions)

* 3 minor enhancements

  * should throw_symbol accepts an optional argument: should throw_symbol(:sym, arg)
  * fixed --line for jruby (Zach Moazeni)
  * assorted small changes to support Ruby 1.9 (got a way to go)
  
* 3 bug fixes

  * fixed bug where {:a => 1, :b => 2}.should include(:a, :b) failed (Yossef Mendelssohn)
  * only try to load Test::Unit if Test::Unit is defined (not just Test)
  * Allow stubs on parent and child classes simultaneously (Jim Lindley). Fixes #600.

=== Version 1.1.11 / 2008-10-24

* 1 major enhancement

  * eliminate ALL gem dependencies (as they were causing trouble for people on different platforms/environments)

=== Version 1.1.10 / 2008-10-24

* 1 minor enhancement

  * hash.should include(:key => 'value') #when you don't care about the whole hash

* 2 bug fixes

  * fix --help output (had inaccurate info about 'nested' formatter)
  * eliminate spicycode-rcov dev dependency for rubygems < 1.3

=== Version 1.1.9 / 2008-10-20

WARNING: This release removes implicit inclusion of modules in example groups.
This means that if you have 'describe MyModule do', MyModule will not be
included in the group.

* 2 major enhancements

  * Add extend to configuration (thanks to advice from Chad Fowler)
  * Modules are no longer implicitly included in example groups

* 4 minor enhancements

  * mingw indicates windows too (thanks to Luis Lavena for the tip)
  * improved output for partial mock expecation failures
  * it_should_behave_like now accepts n names of shared groups
  * eliminated redundant inclusion/extension of ExampleGroupMethods
